--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Polifilo - Portfolio & App Store</title>
-    <meta name="description" content="Polifilo - Professional portfolio showcasing innovative digital solutions, UI/UX design, and mobile applications. Explore our app store and creative work." />
+    <title>Heztra Store - Portfolio & App Store</title>
+    <meta name="description" content="Heztra Store - Professional portfolio showcasing innovative digital solutions, UI/UX design, and mobile applications. Explore our app store and creative work." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <!-- Open Graph tags for better social media sharing -->
-    <meta property="og:title" content="Polifilo - Portfolio & App Store" />
+    <meta property="og:title" content="Heztra Store - Portfolio & App Store" />
     <meta property="og:description" content="Professional portfolio showcasing innovative digital solutions, UI/UX design, and mobile applications." />
     <meta property="og:type" content="website" />
   </head>
